feat(api): scaffold postgres DB

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,8 @@
     "editor.trimAutoWhitespace": true,
     "editor.tabSize": 2,
     "eslint.codeActionsOnSave.mode": "problems",
-    "eslint.packageManager": "yarn"
+    "eslint.packageManager": "yarn",
+    "files.associations": {
+      ".env.*": "ini",
+    },
 }
