--- a/api/package.json
+++ b/api/package.json
@@ -17,10 +17,13 @@
   },
   "dependencies": {
     "@nestjs/common": "9.2.1",
+    "@nestjs/config": "2.2.0",
     "@nestjs/core": "9.2.1",
     "@nestjs/platform-express": "9.2.1",
+    "@nestjs/typeorm": "9.0.1",
     "reflect-metadata": "0.1.13",
-    "rxjs": "7.8.0"
+    "rxjs": "7.8.0",
+    "typeorm": "0.3.11"
   },
   "devDependencies": {
     "@nestjs/cli": "9.1.8",
