--- a/api/package.json
+++ b/api/package.json
@@ -13,7 +13,8 @@
     "start": "nest start",
     "lint": "eslint \"src/**/*.ts\"",
     "lint:fix": "yarn lint --fix",
-    "test": "jest"
+    "test": "jest",
+    "sdk:generate": "yarn openapi-generator-cli generate -i openapi.yaml -g typescript-axios -o sdk/src -p modelPropertyNaming=original --remove-operation-id-prefix -p useSingleRequestParameter=true"
   },
   "dependencies": {
     "@nestjs/common": "9.2.1",
@@ -29,6 +30,7 @@
     "@nestjs/cli": "9.1.8",
     "@nestjs/schematics": "9.0.4",
     "@nestjs/testing": "9.2.1",
+    "@openapitools/openapi-generator-cli": "2.5.2",
     "@types/express": "4.17.15",
     "@types/jest": "29.2.5",
     "@types/node": "18.11.18",
