--- a/api/package.json
+++ b/api/package.json
@@ -10,10 +10,10 @@
   },
   "scripts": {
     "build": "nest build",
-    "start": "nest start",
+    "start": "nest start --watch",
     "lint": "eslint \"src/**/*.ts\"",
     "lint:fix": "yarn lint --fix",
-    "test": "jest",
+    "test": "jest --passWithNoTests",
     "sdk:generate": "yarn openapi-generator-cli generate -i openapi.yaml -g typescript-axios -o sdk/src -p modelPropertyNaming=original --remove-operation-id-prefix -p useSingleRequestParameter=true"
   },
   "dependencies": {
