feat(api): add pga_player entity

--- a/api/.env.example
+++ b/api/.env.example
@@ -5,5 +5,6 @@ POSTGRES_PORT=5430
 POSTGRES_DB=pgapoolapi
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
-ENABLE_SSL=false
+POSTGRES_ENABLE_SCHEMA_MIGRATION=true
+POSTGRES_ENABLE_SSL=false
 ENABLE_SQL_DEBUG_LOG=false
