--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -8,6 +8,6 @@ services:
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: postgres
+      POSTGRES_DB: pgapoolapi
       POSTGRES_PORT: 5432
       POSTGRES_HOST: postgres
