--- a/api/package.json
+++ b/api/package.json
@@ -14,6 +14,8 @@
     "lint": "eslint \"src/**/*.ts\"",
     "lint:fix": "yarn lint --fix",
     "test": "jest --passWithNoTests",
+    "typeorm": "ts-node -r tsconfig-paths/register tools/typeorm.ts",
+    "db:migrations:generate": "yarn typeorm migration:generate --pretty",
     "sdk:generate": "yarn openapi-generator-cli generate -i openapi.yaml -g typescript-axios -o sdk/src -p modelPropertyNaming=original --remove-operation-id-prefix -p useSingleRequestParameter=true"
   },
   "dependencies": {
@@ -22,6 +24,7 @@
     "@nestjs/core": "9.2.1",
     "@nestjs/platform-express": "9.2.1",
     "@nestjs/typeorm": "9.0.1",
+    "pg": "8.8.0",
     "reflect-metadata": "0.1.13",
     "rxjs": "7.8.0",
     "typeorm": "0.3.11"
@@ -34,9 +37,12 @@
     "@types/express": "4.17.15",
     "@types/jest": "29.2.5",
     "@types/node": "18.11.18",
+    "@types/pg": "8.6.6",
     "@types/supertest": "2.0.12",
     "@typescript-eslint/eslint-plugin": "5.48.0",
     "@typescript-eslint/parser": "5.48.0",
+    "cross-env": "7.0.3",
+    "dotenv": "16.0.3",
     "eslint": "8.31.0",
     "eslint-config-prettier": "8.6.0",
     "eslint-config-prettier-standard": "4.0.1",
