--- a/api/package.json
+++ b/api/package.json
@@ -15,10 +15,12 @@
     "lint:fix": "yarn lint --fix",
     "test": "jest --passWithNoTests",
     "typeorm": "ts-node -r tsconfig-paths/register tools/typeorm.ts",
+    "pgapool": "ts-node cli/index.ts",
     "db:migrations:generate": "yarn typeorm migration:generate --pretty",
     "sdk:generate": "yarn openapi-generator-cli generate -i openapi.yaml -g typescript-axios -o sdk/src -p modelPropertyNaming=original --remove-operation-id-prefix -p useSingleRequestParameter=true"
   },
   "dependencies": {
+    "@nestjs/axios": "1.0.1",
     "@nestjs/common": "9.2.1",
     "@nestjs/config": "2.2.0",
     "@nestjs/core": "9.2.1",
@@ -35,12 +37,14 @@
     "@nestjs/testing": "9.2.1",
     "@openapitools/openapi-generator-cli": "2.5.2",
     "@types/express": "4.17.15",
+    "@types/figlet": "1.5.5",
     "@types/jest": "29.2.5",
     "@types/node": "18.11.18",
     "@types/pg": "8.6.6",
     "@types/supertest": "2.0.12",
     "@typescript-eslint/eslint-plugin": "5.48.0",
     "@typescript-eslint/parser": "5.48.0",
+    "commander": "9.5.0",
     "cross-env": "7.0.3",
     "dotenv": "16.0.3",
     "eslint": "8.31.0",
@@ -53,6 +57,7 @@
     "eslint-plugin-promise": "6.1.1",
     "eslint-plugin-simple-import-sort": "8.0.0",
     "eslint-plugin-standard": "5.0.0",
+    "figlet": "1.5.2",
     "jest": "29.3.1",
     "prettier": "2.8.2",
     "prettier-config-standard": "5.0.0",
