feat(api): PGA tournament leaderboard API

--- a/api/.env.example
+++ b/api/.env.example
@@ -8,3 +8,6 @@ POSTGRES_PASSWORD=postgres
 POSTGRES_ENABLE_SCHEMA_MIGRATION=true
 POSTGRES_ENABLE_SSL=false
 ENABLE_SQL_DEBUG_LOG=false
+
+USER_ID='id8730931'
+USER_TRACKING_ID_SCRIPT_URL='https://microservice.pgatour.com/js'
