--- a/api/package.json
+++ b/api/package.json
@@ -26,10 +26,13 @@
     "@nestjs/core": "9.2.1",
     "@nestjs/platform-express": "9.2.1",
     "@nestjs/typeorm": "9.0.1",
+    "cache-manager": "5.1.4",
+    "jsonwebtoken": "9.0.0",
     "pg": "8.8.0",
     "reflect-metadata": "0.1.13",
     "rxjs": "7.8.0",
-    "typeorm": "0.3.11"
+    "typeorm": "0.3.11",
+    "vm2": "3.9.13"
   },
   "devDependencies": {
     "@nestjs/cli": "9.1.8",
@@ -39,6 +42,7 @@
     "@types/express": "4.17.15",
     "@types/figlet": "1.5.5",
     "@types/jest": "29.2.5",
+    "@types/jsonwebtoken": "9.0.0",
     "@types/node": "18.11.18",
     "@types/pg": "8.6.6",
     "@types/supertest": "2.0.12",
