chore(api): remove source maps from SDK package

--- a/api/sdk/tsconfig.json
+++ b/api/sdk/tsconfig.json
@@ -6,7 +6,7 @@
     "declarationDir": "dist/types",
     "moduleResolution": "node",
     "outDir": "dist",
-    "sourceMap": true
+    "sourceMap": false
   },
   "include": ["src"],
   "exclude": ["node_modules"]
