--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "node": ">=18"
   },
   "dependencies": {
+    "@drewkimberly/pga-pool-api": "0.0.1-5c9a8bf",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "14.4.3",
@@ -15,6 +16,7 @@
     "@types/react-dom": "18.0.10",
     "@typescript-eslint/eslint-plugin": "5.48.0",
     "@typescript-eslint/parser": "5.48.0",
+    "axios": "1.2.2",
     "eslint-config-prettier": "8.6.0",
     "eslint-config-prettier-standard": "4.0.1",
     "eslint-config-standard": "17.0.0",
@@ -26,11 +28,14 @@
     "eslint-plugin-react": "7.31.11",
     "eslint-plugin-simple-import-sort": "8.0.0",
     "eslint-plugin-standard": "5.0.0",
+    "grommet": "2.29.0",
+    "grommet-icons": "4.8.0",
     "prettier": "2.8.1",
     "prettier-config-standard": "5.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-scripts": "5.0.1",
+    "styled-components": "5.3.6",
     "typescript": "4.9.4",
     "web-vitals": "3.1.0"
   },
@@ -39,7 +44,7 @@
     "build": "react-scripts build",
     "lint": "eslint \"src/**/*.{tsx,ts,jsx,js}\"",
     "lint:fix": "yarn lint --fix",
-    "test": "react-scripts test",
+    "test": "react-scripts test --passWithNoTests",
     "eject": "react-scripts eject"
   },
   "browserslist": {
