feat(api): autogenerate tiered field per-tournament

--- a/api/.env.example
+++ b/api/.env.example
@@ -9,5 +9,9 @@ POSTGRES_ENABLE_SCHEMA_MIGRATION=true
 POSTGRES_ENABLE_SSL=false
 ENABLE_SQL_DEBUG_LOG=false
 
+# PGA Tour API vars
 USER_ID='id8730931'
 USER_TRACKING_ID_SCRIPT_URL='https://microservice.pgatour.com/js'
+
+# Metabeta API vars
+METABET_API_KEY='219f64094f67ed781035f5f7a08840fc'
