--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,7 @@
     "node": ">=18"
   },
   "dependencies": {
-    "@drewkimberly/pga-pool-api": "0.0.1-5c44b5c",
+    "@drewkimberly/pga-pool-api": "0.0.1-1759ed3",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "14.4.3",
@@ -34,6 +34,7 @@
     "prettier-config-standard": "5.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-router-dom": "6.7.0",
     "react-scripts": "5.0.1",
     "styled-components": "5.3.6",
     "typescript": "4.9.4",
