--- a/client/package.json
+++ b/client/package.json
@@ -6,11 +6,12 @@
     "node": ">=18"
   },
   "dependencies": {
-    "@drewkimberly/pga-pool-api": "0.0.1-1759ed3",
+    "@drewkimberly/pga-pool-api": "0.0.1-f8c12bb",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "14.4.3",
     "@types/jest": "29.2.5",
+    "@types/luxon": "3.2.0",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
@@ -30,6 +31,7 @@
     "eslint-plugin-standard": "5.0.0",
     "grommet": "2.29.0",
     "grommet-icons": "4.8.0",
+    "luxon": "3.2.1",
     "prettier": "2.8.1",
     "prettier-config-standard": "5.0.0",
     "react": "18.2.0",
