--- a/client/package.json
+++ b/client/package.json
@@ -38,6 +38,7 @@
     "react-dom": "18.2.0",
     "react-router-dom": "6.7.0",
     "react-scripts": "5.0.1",
+    "recharts": "2.3.2",
     "styled-components": "5.3.6",
     "typescript": "4.9.4",
     "web-vitals": "3.1.0"
