--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,7 @@
     "node": ">=18"
   },
   "dependencies": {
-    "@drewkimberly/pga-pool-api": "0.0.1-68cbdd4",
+    "@drewkimberly/pga-pool-api": "0.0.1-9d39360",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "14.4.3",
@@ -15,6 +15,7 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "@types/styled-components": "5.1.26",
     "@typescript-eslint/eslint-plugin": "5.48.0",
     "@typescript-eslint/parser": "5.48.0",
     "axios": "1.2.2",
