--- a/api/package.json
+++ b/api/package.json
@@ -31,6 +31,7 @@
     "@nestjs/typeorm": "9.0.1",
     "cache-manager": "5.1.4",
     "jsonwebtoken": "9.0.0",
+    "node-html-parser": "6.1.4",
     "pg": "8.8.0",
     "reflect-metadata": "0.1.13",
     "rxjs": "7.8.0",
