feat(api): migrate PGA players/tournaments onto gql

--- a/api/.env.example
+++ b/api/.env.example
@@ -10,8 +10,8 @@ POSTGRES_ENABLE_SSL=false
 ENABLE_SQL_DEBUG_LOG=false
 
 # PGA Tour API vars
-USER_ID='id8730931'
-USER_TRACKING_ID_SCRIPT_URL='https://microservice.pgatour.com/js'
+PGA_TOUR_API_GQL_URL='https://orchestrator.pgatour.com/graphql'
+PGA_TOUR_API_GQL_API_KEY=''
 
 # Metabeta API vars
-METABET_API_KEY='219f64094f67ed781035f5f7a08840fc'
+METABET_API_KEY=''
