--- a/api/package.json
+++ b/api/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "license": "MIT",
   "engines": {
-    "node": ">=18"
+    "node": ">=20"
   },
   "scripts": {
     "build": "nest build",
@@ -24,61 +24,62 @@
     "sdk:generate": "yarn openapi-generator-cli generate -i openapi.yaml -g typescript-axios -o sdk/src -p modelPropertyNaming=original --remove-operation-id-prefix -p useSingleRequestParameter=true"
   },
   "dependencies": {
-    "@nestjs/axios": "1.0.1",
-    "@nestjs/common": "9.2.1",
-    "@nestjs/config": "2.2.0",
-    "@nestjs/core": "9.2.1",
-    "@nestjs/platform-express": "9.2.1",
-    "@nestjs/typeorm": "9.0.1",
-    "cache-manager": "5.1.4",
+    "@nestjs/axios": "3.0.1",
+    "@nestjs/common": "10.3.0",
+    "@nestjs/config": "3.1.1",
+    "@nestjs/core": "10.3.0",
+    "@nestjs/platform-express": "10.3.0",
+    "@nestjs/typeorm": "10.0.1",
+    "cache-manager": "5.3.2",
     "deepmerge": "4.3.1",
     "graphql": "16.8.1",
     "graphql-request": "6.1.0",
-    "jsonwebtoken": "9.0.0",
-    "node-html-parser": "6.1.4",
-    "pg": "8.8.0",
-    "reflect-metadata": "0.1.13",
-    "rxjs": "7.8.0",
-    "typeorm": "0.3.11",
-    "vm2": "3.9.13"
+    "jsonwebtoken": "9.0.2",
+    "node-html-parser": "6.1.12",
+    "pg": "8.11.3",
+    "reflect-metadata": "0.2.1",
+    "rxjs": "7.8.1",
+    "typeorm": "0.3.19"
   },
   "devDependencies": {
-    "@nestjs/cli": "9.1.8",
-    "@nestjs/schematics": "9.0.4",
-    "@nestjs/testing": "9.2.1",
-    "@openapitools/openapi-generator-cli": "2.5.2",
-    "@types/express": "4.17.15",
-    "@types/figlet": "1.5.5",
-    "@types/jest": "29.2.5",
-    "@types/jsonwebtoken": "9.0.0",
-    "@types/node": "18.11.18",
-    "@types/pg": "8.6.6",
-    "@types/supertest": "2.0.12",
-    "@typescript-eslint/eslint-plugin": "5.48.0",
-    "@typescript-eslint/parser": "5.48.0",
-    "commander": "9.5.0",
+    "@nestjs/cli": "10.3.0",
+    "@nestjs/schematics": "10.1.0",
+    "@nestjs/testing": "10.3.0",
+    "@openapitools/openapi-generator-cli": "2.7.0",
+    "@types/express": "4.17.21",
+    "@types/figlet": "1.5.8",
+    "@types/jest": "29.5.11",
+    "@types/jsonwebtoken": "9.0.5",
+    "@types/node": "20.10.8",
+    "@types/pg": "8.10.9",
+    "@types/supertest": "6.0.2",
+    "@typescript-eslint/eslint-plugin": "6.18.1",
+    "@typescript-eslint/parser": "6.18.1",
+    "commander": "11.1.0",
     "cross-env": "7.0.3",
-    "dotenv": "16.0.3",
-    "eslint": "8.31.0",
-    "eslint-config-prettier": "8.6.0",
+    "dotenv": "16.3.1",
+    "eslint": "8.56.0",
+    "eslint-config-prettier": "9.1.0",
     "eslint-config-prettier-standard": "4.0.1",
-    "eslint-config-standard": "16.0.3",
-    "eslint-plugin-import": "2.26.0",
+    "eslint-config-standard": "17.1.0",
+    "eslint-plugin-import": "2.29.1",
+    "eslint-plugin-n": "16.6.2",
     "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-prettier": "5.1.2",
     "eslint-plugin-promise": "6.1.1",
-    "eslint-plugin-simple-import-sort": "8.0.0",
+    "eslint-plugin-simple-import-sort": "10.0.0",
     "eslint-plugin-standard": "5.0.0",
-    "figlet": "1.5.2",
-    "jest": "29.3.1",
-    "prettier": "2.8.2",
-    "prettier-config-standard": "5.0.0",
+    "eslint-plugin-unused-imports": "3.0.0",
+    "figlet": "1.7.0",
+    "jest": "29.7.0",
+    "prettier": "3.1.1",
+    "prettier-config-standard": "7.0.0",
     "source-map-support": "0.5.21",
     "supertest": "6.3.3",
-    "ts-jest": "29.0.3",
-    "ts-loader": "9.4.2",
-    "ts-node": "10.9.1",
-    "tsconfig-paths": "4.1.2",
-    "typescript": "4.9.4"
+    "ts-jest": "29.1.1",
+    "ts-loader": "9.5.1",
+    "ts-node": "10.9.2",
+    "tsconfig-paths": "4.2.0",
+    "typescript": "5.3.3"
   }
 }
