--- a/api/package.json
+++ b/api/package.json
@@ -30,6 +30,7 @@
     "@nestjs/core": "10.3.0",
     "@nestjs/platform-express": "10.3.0",
     "@nestjs/typeorm": "10.0.1",
+    "axios": "1.6.5",
     "cache-manager": "5.3.2",
     "deepmerge": "4.3.1",
     "graphql": "16.8.1",
