--- a/api/sdk/package.json
+++ b/api/sdk/package.json
@@ -24,11 +24,11 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@tsconfig/recommended": "1.0.1",
-    "typescript": "4.9.4"
+    "@tsconfig/recommended": "1.0.3",
+    "typescript": "5.3.3"
   },
   "peerDependencies": {
-    "axios": ">= 0.26",
+    "axios": "1.x",
     "url": "0.x"
   },
   "engines": {
