--- a/api/package.json
+++ b/api/package.json
@@ -35,6 +35,7 @@
     "deepmerge": "4.3.1",
     "graphql": "16.8.1",
     "graphql-request": "6.1.0",
+    "joi": "17.11.1",
     "jsonwebtoken": "9.0.2",
     "node-html-parser": "6.1.12",
     "pg": "8.11.3",
