--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@types/luxon": "3.4.0",
     "@types/node": "20.10.8",
     "@types/react": "18.2.47",
+    "@types/react-copy-to-clipboard": "5.0.7",
     "@types/react-dom": "18.2.18",
     "@types/styled-components": "5.1.34",
     "@typescript-eslint/eslint-plugin": "6.18.1",
@@ -37,6 +38,7 @@
     "prettier": "3.1.1",
     "prettier-config-standard": "7.0.0",
     "react": "18.2.0",
+    "react-copy-to-clipboard": "5.1.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.21.1",
     "react-scripts": "5.0.1",
