--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,7 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "2.3.0",
-    "@drewkimberly/pga-pool-api": "0.0.1-df4e62b",
+    "@drewkimberly/pga-pool-api": "file:../api/sdk",
     "@testing-library/jest-dom": "6.2.0",
     "@testing-library/react": "14.1.2",
     "@testing-library/user-event": "14.5.2",
