--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -55,7 +55,8 @@ jobs:
           since_last_remote_commit: 'true'
           files: |
             api/openapi.yaml
-            api/sdk/**
+            api/openapi-generator/**
+            client/sdk/**
   
   client-install-dependencies:
     name: (client) Install Dependencies
@@ -108,10 +109,19 @@ jobs:
     steps:
       - name: Checkout Source Code
         uses: actions/checkout@v3
-      - name: Setup Node with Yarn Dependencies
-        uses: ./.github/actions/setup-node-with-dependencies/
+      - name: Setup Node
+        uses: actions/setup-node@v3
         with:
-          cwd: client
+          node-version: '20.x'
+      - name: Install SDK dependencies
+        working-directory: client/sdk
+        run: yarn install
+      - name: Compile SDK
+        working-directory: client/sdk
+        run: yarn compile
+      - name: Install client dependencies
+        working-directory: client
+        run: yarn install
       - name: Build
         working-directory: client
         run: yarn build
@@ -175,15 +185,50 @@ jobs:
           file: ./api/Dockerfile
           push: false
 
-  api-generate-sdk:
-    name: (api) Generate SDK
+  sdk-freshness-check:
+    name: (sdk) Freshness Check
+    needs:
+      - get-changed-files
+      - api-install-dependencies
+    if: |
+      always() &&
+      !failure() &&
+      needs.get-changed-files.outputs.api-changed == 'true'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Source Code
+        uses: actions/checkout@v3
+      - name: Setup Node with Yarn Dependencies
+        uses: ./.github/actions/setup-node-with-dependencies/
+        with:
+          cwd: api
+      - name: Regenerate SDK
+        working-directory: api
+        run: yarn sdk:generate
+      - name: Check for uncommitted SDK changes
+        run: |
+          if [ -n "$(git status --porcelain client/sdk/src/)" ]; then
+            echo "ERROR: SDK is out of date. Run 'yarn --cwd api sdk:generate' and commit the changes."
+            echo ""
+            echo "Changed files:"
+            git status --porcelain client/sdk/src/
+            echo ""
+            echo "Diff:"
+            git diff client/sdk/src/
+            exit 1
+          fi
+          echo "SDK is up to date."
+
+  sdk-publish:
+    name: (sdk) Publish to NPM
     needs:
       - get-changed-files
       - api-lint-and-validate
       - api-test
       - api-build
+      - sdk-freshness-check
     if: |
-      always() && 
+      always() &&
       !failure() &&
       needs.get-changed-files.outputs.api-oas-changed == 'true'
     runs-on: ubuntu-latest
@@ -194,28 +239,24 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - name: Setup Node with Yarn Dependencies
-        uses: ./.github/actions/setup-node-with-dependencies/
-        with:
-          cwd: api
       - name: Setup NodeJS for Publishing
         uses: actions/setup-node@v3
         with:
           node-version: '20.x'
           registry-url: 'https://registry.npmjs.org'
-      - name: Generate SDK
-        working-directory: api
-        run: yarn sdk:generate
+      - name: Install SDK dependencies
+        working-directory: client/sdk
+        run: yarn install --frozen-lockfile
       - name: Compile SDK
-        working-directory: api/sdk
-        run: yarn install && yarn compile
+        working-directory: client/sdk
+        run: yarn compile
       - name: Create new SDK version
         id: sdk-version
-        working-directory: api/sdk
+        working-directory: client/sdk
         run: echo "version=0.0.1-$(git rev-parse --short ${{ github.sha }})" >> $GITHUB_OUTPUT
       - name: Publish to NPM
         shell: bash
-        working-directory: api/sdk
+        working-directory: client/sdk
         run: $GITHUB_WORKSPACE/.github/scripts/publish-npm.sh ${{ steps.sdk-version.outputs.version }} ${{ github.event_name != 'push' || github.ref != 'refs/heads/main' }}
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
