--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,7 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "2.3.0",
-    "@drewkimberly/pga-pool-api": "file:../api/sdk",
+    "@drewkimberly/pga-pool-api": "file:./sdk",
     "@testing-library/jest-dom": "6.2.0",
     "@testing-library/react": "14.1.2",
     "@testing-library/user-event": "14.5.2",
@@ -53,7 +53,8 @@
     "lint": "eslint \"src/**/*.{tsx,ts,jsx,js}\"",
     "lint:fix": "yarn lint --fix",
     "test": "react-scripts test --passWithNoTests",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "install-vercel": "yarn --cwd sdk install --frozen-lockfile --ignore-optional && yarn --cwd sdk compile &&  yarn --frozen-lockfile --ignore-optional"
   },
   "browserslist": {
     "production": [
