--- a/client/sdk/package.json
+++ b/client/sdk/package.json
@@ -11,7 +11,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/Drew-Kimberly/pga-pool",
-    "directory": "api"
+    "directory": "client/sdk"
   },
   "main": "dist/index.js",
   "files": [
@@ -25,6 +25,7 @@
   "dependencies": {},
   "devDependencies": {
     "@tsconfig/recommended": "1.0.3",
+    "axios": "1.6.5",
     "typescript": "5.3.3"
   },
   "peerDependencies": {
