feat(api): add GET /pga-tournaments/:id/players route

--- a/api/.env.example
+++ b/api/.env.example
@@ -25,3 +25,6 @@ AUTH0_CLIENT_SECRET=your-client-secret
 # Feature Flags
 AUTH_ENABLED=true
 AUTH_REQUIRED=false
+
+# Async Worker
+ASYNC_WORKER_JITTER_MS=10000
