feat(client): config-based login button in header

--- a/client/.env.example
+++ b/client/.env.example
@@ -6,3 +6,4 @@ REACT_APP_PGA_POOL_API_URL=http://localhost:3000
 REACT_APP_AUTH0_DOMAIN=your-tenant.auth0.com
 REACT_APP_AUTH0_CLIENT_ID=your-client-id
 REACT_APP_AUTH0_AUDIENCE=https://api.pga-pool.drewk.dev
+REACT_APP_AUTH_ENABLED=true
